--- a/src/main/webapp/resources/bootstrap/css/style.css
+++ b/src/main/webapp/resources/bootstrap/css/style.css
@@ -336,7 +336,7 @@ a:hover{
 .navbar{
     margin-bottom: 0;
     background:#337ab7;
-    min-height:35px;
+    min-height:50px;
     border:none;
     clear: both;
 }
@@ -426,9 +426,9 @@ a:hover{
 .navbar-default .navbar-nav li a{
     color:#555;
     text-transform:uppercase;
-    font-size: 13px;
+    font-size: 18px;
     font-weight: 600;
-    line-height:15px;
+    line-height:20px;
 }
 .navbar-default .navbar-nav > li{ border-left:1px solid #262626; border-right:1px solid #595959;}
 
@@ -436,6 +436,7 @@ a:hover{
 
 .navbar-default .navbar-nav > li > a{
     padding:14px 25px;
+    height:20px;
     color:#fff;
 }
 .navbar-nav > li > a:hover,.navbar-nav > li > a:focus,.navbar-nav > li.active > a,
@@ -476,7 +477,7 @@ a:hover{
 
 .navbar-nav .dropdown-menu > li > a {
     white-space:normal;
-    font-size: 13px;
+    font-size: 12px;
     padding:12px 20px;
     border-bottom:1px solid #e4e4e4;
 }
@@ -520,9 +521,12 @@ ul.sm li *,ul.sm li *:before,ul.sm li *:after{-moz-box-sizing:content-box;-webki
     color:#fff;
 }
 .footer_bottom{
-    background:#242424;
-    padding:20px 0;
-    color:#fff;
+    width: 100%;
+    height: auto;
+    margin-top: -50px;
+    background: url(/resources/bootstrap/images/footer_bg.png) repeat-x left top;
+    position: relative;
+    z-index: 20;
 }
 .footer a:hover{color:#E74C3C;}
 /* Footer Widgets
@@ -3753,6 +3757,14 @@ ul{
     #logo-bar{ display: none;}
 
     #logo { margin: 7px 0 7px 15px; }
+    
+    #logo img
+	{
+    width:100%;
+    height:100px;
+    margin-left:0px;
+    
+	}
 
     .navbar{
         background:#fff;
@@ -3769,6 +3781,7 @@ ul{
         position: absolute;
         width: 100%;
     }
+    
     .dropdown-menu .dropdown-menu{margin:0 0 0 0!important;}
 
     .dropdown-menu .dropdown-menu li a{padding:0 0 0 60px!important;}
