--- a/src/main/webapp/resources/bootstrap/css/style.css
+++ b/src/main/webapp/resources/bootstrap/css/style.css
@@ -3123,8 +3123,8 @@ ul.nav-tabs li.last-tab a
 .promo_box.dark .promo_content p{ color: #B0B0B0; }
 
 .promo_box {
-    background:#f2f2f2;
-    border-left: 5px solid #E74C3C;
+    background:#ffffff;
+    border-left: 5px solid #3c8dbc;
 }
 
 
