9/24 게시판 에디터 버그 보수,반응형 구상~ ~반응형 적용(보수 조금필요),mobile device 이동

--- a/src/main/webapp/resources/bootstrap/css/fractionslider.css
+++ b/src/main/webapp/resources/bootstrap/css/fractionslider.css
@@ -122,3 +122,17 @@
 .fs-custom-pager-wrapper .active{
     /*background:url(../images/fraction-slider/fs.pager.png) 0px 0px no-repeat transparent;*/
 }
+
+@media only screen and (max-width: 767px){
+	
+	.fraction-slider{
+    position:relative;
+    width:100%; height:100%;
+    overflow:visible;
+}
+.fraction-slider .slide{
+    display:none; width:100%; height:300px;
+    position:absolute;
+    z-index:5000;
+}
+}
