--- a/src/main/webapp/resources/bootstrap/css/style-fraction.css
+++ b/src/main/webapp/resources/bootstrap/css/style-fraction.css
@@ -62,3 +62,16 @@
     font-size:120%;
     line-height:210% !important;
 }
+
+@media only screen and (max-width:767px){
+	.slider{
+    position:relative;
+    width:80%;
+    /*	height:400px; when responsive, comment this out */
+    margin:0 auto;
+    height:300px;
+    background-size:100%;
+    overflow: hidden;
+    z-index:0;
+}
+}
