9/27 관리자 관련 추가작업,AWS MYSQL 접속에러 -> 새로복구,반응형보수(zoom 등)

--- a/src/main/webapp/resources/bootstrap/css/style.css
+++ b/src/main/webapp/resources/bootstrap/css/style.css
@@ -493,7 +493,7 @@ a:hover{
 
 .navbar-nav .dropdown-menu > li > a:hover
 {
-    color:#E74C3C;
+    color:#3c8dbc;
 }
 .navbar-nav ul.sm-nowrap > li > a {
     white-space:nowrap;
@@ -1308,7 +1308,7 @@ ul.tags {
     display: block;
 }
 .blog_medium .day {
-    background:#E74C3C;
+    background:#3c8dbc;
     color: #FFFFFF;
     font-size: 22px;
     font-weight: 600;
